Updated package.json
